feat: add custom feed endpoint and enable observability with virtual threads
- Implement `getCustomNewsFeed` in `NewsAggregationService` to support dynamic parallel fetching of topics using `StructuredTaskScope`
- Add `/api/news/custom` endpoint in `NewsController` to expose the new functionality
- Integrate Micrometer Tracing and OpenTelemetry bridge for distributed tracing
- Implement `ContextSnapshotFactory` to properly propagate Trace IDs and Span IDs into Virtual Threads
- Configure `application.properties` to format console logs with trace context and disable unused OTLP exporters